[package]
name = "cqc"
version = "0.3.0"
authors = ["Wojciech Kozlowski <wk@wojciechkozlowski.eu>"]
license = "MIT"
keywords = ["cqc", "quantum", "simulaqron"]
readme = "README.md"
repository = "https://github.com/Wojtek242/cqc"
homepage = "https://github.com/Wojtek242/cqc"
documentation = "https://docs.rs/cqc"
description = """
An implementation of the CQC interface.
"""

[dependencies]
bincode = "1.0"
serde = "1.0"
serde_derive = "1.0"
bitflags = "1.0"