[package]
name = "cqc"
version = "0.6.0"
authors = ["Wojciech Kozlowski <wk@wojciechkozlowski.eu>"]
license = "MIT"
keywords = ["cqc", "quantum", "simulaqron"]
readme = "README.md"
repository = "https://github.com/Wojtek242/cqc"
homepage = "https://github.com/Wojtek242/cqc"
documentation = "https://docs.rs/cqc"
description = """
An implementation of the CQC interface.
"""

[dependencies]
bincode = "1"
bitflags = "1"
enum-display-derive = "0"
serde = "1"
serde_derive = "1"
